# rust-cli-todo-app

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: rust.yml
install/: mac.sh
migrations/2025-01-26-204825_todos/: up.sql
src/: cli.rs  database.rs  lib.rs  main.rs  models.rs  os.rs  schema.rs
