[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
diesel = { version = "2.2.6", features = ["chrono", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tabled = "0.17.0"
